crates/mockiato-compiletest/tests/ui/method_without_self.rs
use mockiato::mockable;

#[mockable]
trait Foo {
    fn bar(baz: u64);
}

fn main() {}
